YUK-25806 : DR Load Program spacing issues(fixed review comment)

--- a/yukon-client/yukon-web/src/com/cannontech/web/common/resources/overrides.less
+++ b/yukon-client/yukon-web/src/com/cannontech/web/common/resources/overrides.less
@@ -973,7 +973,7 @@ span.error {
     float: left;
 }
 
-div.ui-widget-content {
+div.ui-dialog-content .action-area {
     margin-left: -24px;
     margin-right: -24px;
     padding: 20px 5px 5px 10px !important;
